# wasm-research

./: .gitignore  README.md  package.json  results.json
public/: index.html  index.js  native_impl.js  results.js  tests.js  util.js
rust/: Cargo.toml  makefile.toml
rust/.cargo/: config.toml
rust/backend/: Cargo.toml
rust/backend/src/: lib.rs
rust/multithread/: Cargo.toml
rust/multithread/src/: lib.rs
rust/singlethread/: Cargo.toml
rust/singlethread/src/: lib.rs
server/: index.js  results.json  store_results.js  util.js
tests/: sample.json  sample1.json  store.test.js
